--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "randomcolor": "^0.5.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-dragula": "^1.1.17",
+    "react-scripts": "3.3.0",
+    "react-sortablejs": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
